force-app/main/default/objects/MUSW__Fund__c/MUSW__Fund__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Track surety Bonds to assure performance, etc.</description>
    <label>Bond</label>
    <nameField>
        <displayFormat>B-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>