force-app/main/default/objects/MUSW__Fund__c/fields/MUSW__Application__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Planning_Application__c</referenceTo>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>