force-app/main/default/objects/MUSW__Fund__c/fields/MUSW__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>