force-app/main/default/objects/MUSW__Fund__c/fields/MUSW__Insurer__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Underwriter of fund</description>
    <label>Insurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bonds</relationshipLabel>
    <relationshipName>Funds_Insured</relationshipName>
    <type>Lookup</type>
</CustomField>