force-app/main/default/objects/MUSW__Fund__c/fields/MUSW__Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Original_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount (Dollars)</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>