force-app/main/default/objects/MUSW__Fund__c/fields/MUSW__Purpose__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Labor &amp; Materials</fullName>
                <default>true</default>
                <label>Labor &amp; Materials</label>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>